--- a/gb/23/11/19/n14119492.md
+++ b/gb/23/11/19/n14119492.md
@@ -1,60 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王赫：从时局之危险看《九评共产党》的伟大意义</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/0aac93f0acd9add6770f631161d0ecdc-600x400.jpg" />
 <h6>被中共列为禁书的《九评共产党》。（博大出版社提供）
 </h6>
 <hr>
-	<p>【大纪元2023年11月19日讯】“二十大”以来，中共的末路狂奔，几乎人人都看的清楚了。而这，又直接源于当今的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E9%AD%81.md#1">中共党魁</a>。</p>
-<p>第一，党魁“防政变”，将火箭军高层一锅端，撤掉国防部长一任职位空缺，还扩大清洗范围，使军队将领人心惶惶；第二，党魁要“定于一尊”，打击、抑制党内各个派系（如团灭“团派”），消除任何潜在的威胁者，李克强诡异猝死，让中共高层、政治老人等等人人自危；第三，党魁要“保党”，向左转，而与中共权贵、既得利益阶层发生剧烈的利益冲突（从当前高调的国企、金融反腐中可见一斑），使自己成为孤家寡人、众矢之的；第四，“习家军”一家独大，党魁在内部搞平衡，却因此激化了“习家军”的内斗（如秦刚当外长六个月就落马），以蔡奇为首的福建帮和以李强为首的浙江帮斗的不亦乐乎；第五，中国经济风雨飘摇，当局却束手无策。</p>
-<p>难怪乎<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E9%AD%81.md#1">中共党魁</a>被称为“总加速师”。不过，中共政局随时可能爆炸，如果爆炸的话，炸掉的将不止是党魁一人，还有这个党。“白纸运动”中的两句口号——“共产党下台”、“习近平下台”， 就突出表现了整个社会的情绪。</p>
-<p>固然，解体中共是人心所向，但是，有人担心：中共垮台会不会导致中国大乱？比如，中共从来都是用党性来吞噬人性，从不将人当人看，杀个人就像踩死一只蚂蚁，但是，这种邪恶的党文化毒害的不仅仅是官员、党员，还有大众，在中国社会 一直蔓延着<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BB%87%E6%81%A8.md#1">仇恨</a>情绪；如果用仇恨情绪去主导中国的政治转型，出现的一定是屠杀。有人提出：“中国今后最重要的问题，不是中共政权什么时候崩溃，而是一旦中共政权退出历史舞台之后，中国是否具备相应的社会重建能力。”</p>
+	<p>【大纪元2023年11月19日讯】“二十大”以来，中共的末路狂奔，几乎人人都看的清楚了。而这，又直接源于当今的中共党魁。</p>
+<p>第一，党魁“防政变”，将火箭军高层一锅端，撤掉国防部长一任职位空缺，还扩大清洗范围，使军队将领人心惶惶；第二，党魁要“定于一尊”，打击、抑制党内各个派系（如团灭“团派”），消除任何潜在的威胁者，李克强诡异猝死，让中共高层、政治老人等等人人自危；第三，党魁要“保党”，向左转，而与中共权贵、既得利益阶层发生剧烈的利益冲突（从当前高调的国企、金融反腐中可见一斑），使自己成为孤家寡人、众矢之的；第四，“习家军”一家独大，党魁在内部搞平衡，却因此激化了“习家军”的内斗（如秦刚当外长六个月就落马），以蔡奇为首的福建帮和以李强为首的浙江帮斗得不亦乐乎；第五，中国经济风雨飘摇，当局却束手无策。</p>
+<p>难怪乎中共党魁被称为“总加速师”。不过，中共政局随时可能爆炸，如果爆炸的话，炸掉的将不止是党魁一人，还有这个党。“白纸运动”中的两句口号——“共产党下台”“习近平下台”， 就突出表现了整个社会的情绪。</p>
+<p>固然，解体中共是人心所向，但是，有人担心：中共垮台会不会导致中国大乱？比如，中共从来都是用党性来吞噬人性，从不将人当人看，杀个人就像踩死一只蚂蚁，但是，这种邪恶的党文化毒害的不仅仅是官员、党员，还有大众，在中国社会 一直蔓延着仇恨情绪；如果用仇恨情绪去主导中国的政治转型，出现的一定是屠杀。有人提出：“中国今后最重要的问题，不是中共政权什么时候崩溃，而是一旦中共政权退出历史舞台之后，中国是否具备相应的社会重建能力。”</p>
 <p>还有另一种危险：中共临死之际会不会铤而走险，比如打台湾、打核战争？这也不算是杞人忧天。因为中共是魔鬼，它搞的是“毁灭性政治”：我得不到的就统统毁掉，你别想要；我要死，你们也别活。这也是台湾、南韩等等能民主转型而中共不能的原因所在。</p>
 <p>因此，中共解体之际，恐怕也是中国危险之时，不能够盲目乐观。那么，如何化解危险呢？</p>
-<p>且先看个南非的例子。南非摆脱种族隔离、成功转型，图图大主教作出了决定性贡献，因为他帮助南非最终走出了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BB%87%E6%81%A8.md#1">仇恨</a>和暴力互相刺激的恶性循环。在那个仇恨和暴力火山般迸发的年代，“图图拿什么去搏击风云？凭什么力挽狂澜？无它，惟有人性，惟有爱。 ”的确，精神的、道德的力量之伟岸，无可估量。</p>
+<p>且先看个南非的例子。南非摆脱种族隔离、成功转型，图图大主教做出了决定性贡献，因为他帮助南非最终走出了仇恨和暴力互相刺激的恶性循环。在那个仇恨和暴力火山般迸发的年代，“图图拿什么去搏击风云？凭什么力挽狂澜？无它，惟有人性，惟有爱。 ”的确，精神的、道德的力量之伟岸，无可估量。</p>
 <p>那么，中国有如此幸运吗？有。中国的幸运，可不仅是一个人，还有一本伟大的书启动的一个伟大的精神觉醒、人性复苏运动。</p>
-<p>这本书就是2004年11月19日开始发表的大纪元系列社论《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">九评共产党</a>》；同年12月4日，大纪元设立退党网站，为读者提供一个公开表达自己退党、退团、退队声明（“三退”）和发表言论的场地。从此，“三退”大潮激浊扬清、涤荡中华。至2005年11月18日，在退党网站声明退出中共及其相关组织的人数已经达到568万。迄今，《九评共产党》发表19周年，“三退”人数累计4.2亿。</p>
-<p>《<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">九评共产党</a>》被东西方政治家、学者、民众成为是一本“奇书”、“解体中共的书”、“推倒中国柏林墙的书”、“改变世界的书”，名至实归。</p>
+<p>这本书就是2004年11月19日开始发表的大纪元系列社论《九评共产党》；同年12月4日，大纪元设立退党网站，为读者提供一个公开表达自己退党、退团、退队声明（“三退”）和发表言论的场地。从此，“三退”大潮激浊扬清、涤荡中华。至2005年11月18日，在退党网站声明退出中共及其相关组织的人数已经达到568万。迄今，《九评共产党》发表19周年，“三退”人数累计4.2亿。</p>
+<p>《九评共产党》被东西方政治家、学者、民众成为是一本“奇书”、“解体中共的书”、“推倒中国柏林墙的书”、“改变世界的书”，名至实归。</p>
 <p>大家知道，东欧苏联抛弃共产政权，基本上是和平的，其中捷克颇为典型，被称为“天鹅绒革命”（ 比喻转型过程如同欧洲丝绸——天鹅绒一般丝滑柔顺）。哈维尔是“天鹅绒革命”的灵魂人物，他在捷克共产党统治时期受过迫害，坐过牢，对共产党有着切身的体会和认识。</p>
-<p>哈维尔推崇《九评共产党》一书和声援退党。2005年5月25日，哈维尔在响应中国出现《九评共产党》所引发的退党浪潮与以和平方式令中共解体的看法时，表示说：“对抗共产主义最好的武器，不是采用武力器械，而是采用道德、理念和知识的武器，能够面对：危险而勇敢的站出来坚持真理是最有效的办法。”</p>
-<p>的确，共产主义运动为祸百年，只有《九评共产党》第一次揭示了“共产主义并非一种思潮、学说，或者在人类寻找出路时一个失败了的尝试”， “它是魔鬼”。共产党是“反自然反人性的邪灵”，具足“邪教本质”、“流氓本性”。</p>
-<p>《九评共产党》的广泛传播，使越来越多的人 认清了中共的真面目、勇敢三退，从而解放人性、重建道德、拯救灵魂，抛弃了对中共的任何幻想，不再被中共的花招、花言巧语所迷惑。这不仅为中共的解体奠定了人心基础，也为中国走出中共浩劫之后的重建奠定了精神基础。</p>
-<p>试想，如果中国人人人性复苏，社会上的仇恨情绪还有知足之地吗？如果中共军人坚守良知，怎么可能再把枪口对准人民、执行中共的核战争指令呢？更可能的是反戈一击。东欧剧变中罗马尼亚军人不有逮捕、处决独裁者的先例吗？</p>
-<p>从这个角度讲，《九评共产党》德莫大焉。而人人阅读《九评共产党》、人人散发《九评共产党》、人人三退，就是救国，就是在为中国争取最美好的未来。</p>
+<p>哈维尔推崇《九评共产党》一书和声援退党。2005年5月25日，哈维尔在响应中国出现《九评共产党》所引发的退党浪潮与以和平方式令中共解体的看法时，表示说：“对抗共产主义最好的武器，不是采用武力器械，而是采用道德、理念和知识的武器，能够面对：危险而勇敢地站出来坚持真理是最有效的办法。”</p>
+<p>的确，共产主义运动为祸百年，只有《九评共产党》第一次揭示了“共产主义并非一种思潮、学说，或者在人类寻找出路时一个失败了的尝试”， “它是魔鬼”。共产党是“反自然反人性的邪灵”，具足“邪教本质”“流氓本性”。</p>
+<p>《九评共产党》的广泛传播，使越来越多的人 认清了中共的真面目、勇敢“三退”，从而解放人性、重建道德、拯救灵魂，抛弃了对中共的任何幻想，不再被中共的花招、花言巧语所迷惑。这不仅为中共的解体奠定了人心基础，也为中国走出中共浩劫之后的重建奠定了精神基础。</p>
+<p>试想，如果中国人人人性复苏，社会上的仇恨情绪还有立足之地吗？如果中共军人坚守良知，怎么可能再把枪口对准人民、执行中共的核战争指令呢？更可能的是反戈一击。东欧剧变中罗马尼亚军人不有逮捕、处决独裁者的先例吗？</p>
+<p>从这个角度讲，《九评共产党》德莫大焉。而人人阅读《九评共产党》、人人散发《九评共产党》、人人“三退”，就是救国，就是在为中国争取最美好的未来。</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/17/n7902599.md#1">陈思敏：文革50年 重温《九评共产党》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/6/30/n8050567.md#1">大纪元推出《九评共产党》蒙古文版本</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/13/n14094457.md#1">弘正义：马克思主义对人类造成的难解问题、灾难和危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105252.md#1">弘正义：中共污名化西方民主是企图维稳生存、危害世界的巨大阴谋（2）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/17/n7902599.md#1">陈思敏：文革50年 重温《九评共产党》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/30/n8050567.md#1">大纪元推出《九评共产党》蒙古文版本</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/13/n14094457.md#1">弘正义：马克思主义对人类造成的难解问题、灾难和危机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/10/29/n14105252.md#1">弘正义：中共污名化西方民主是企图维稳生存、危害世界的巨大阴谋（2）</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14115070.md#1">印尼巴东山发现至今最古老金字塔</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/12/n14114677.md#1">乐高乐园：创意无限的奇妙之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/13/n14115416.md#1">霸王别姬后 虞姬再见项羽 另外时空解谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/8/n14112219.md#1">跟我学唐诗（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/7/n14111628.md#1">四位相师的神异之事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/18/n14118974.md#1">【时事金扫描】乌军战略大突破 打乱俄冬季战略</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118912.md#1">【菁英论坛】访美无结果 中共宣传内容黔驴技穷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118740.md#1">【晚间新闻】APEC峰会期间 法轮功要求中共停止迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117306.md#1">中国女演员孙菲菲曝影视圈黑幕和“潜规则”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117510.md#1">【翻墙必看】分析：蔡奇做太多肮脏事 命运如何</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14118107.md#1">党魁再被贴独裁者标签 中共外交部网站急删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14118161.md#1">安室奈美惠大量经典歌曲突下架 原因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117518.md#1">韩孝周以《异能》夺大钟奖视后 李炳宪摘影帝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14118065.md#1">奥斯卡敲定主持人 吉米·金摩第四度接棒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117782.md#1">马修离世 珍妮弗安妮斯顿难释怀“伤很深”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/17/n14118421.md#1">王识贤新剧当侠医 与江祖平隔14年再度同台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/14/n14116484.md#1">“水果之神”葡萄抗老防癌 8技巧教你吃对葡萄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/11/n14114493.md#1">新研究发现尿石素A强力抗衰老 5食物含量最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">亚马逊每日精选 · 11/17日编辑推荐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/16/n14117727.md#1">韩国800岁银杏树变身金黄色 游客慕名而来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117148.md#1">“骨质疏松”不能轻忽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/19/n14119492.htm">王赫：从时局之危险看《九评共产党》的伟大意义</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/11/19/n14119492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/23/11/19/n14119492.htm">王赫：从时局之危险看《九评共产党》的伟大意义</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/19/n14119492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
